ui: fix global search dropdown overflow behavior

--- a/ui/app/styles/components/global-search-dropdown.scss
+++ b/ui/app/styles/components/global-search-dropdown.scss
@@ -7,6 +7,7 @@
   background: transparent;
   border: 0;
   position: fixed;
+  max-height: calc(100vh - 1rem);
 
   .ember-power-select-search {
     margin-left: $icon-dimensions;
@@ -33,17 +34,23 @@
   .ember-power-select-options {
     background: white;
     padding: 0.35rem;
+    overflow: hidden auto;
+    max-height: calc(100vh - 5rem);
 
     &[role="listbox"] {
       border: 1px solid $grey-blue;
       box-shadow:
         0 6px 8px -2px rgba($black, 0.05),
         0 8px 4px -4px rgba($black, 0.1);
+      overflow-y: auto;
+      max-height: calc(100vh - 5rem);
     }
 
     .ember-power-select-option {
       padding: 0.2rem 0.4rem;
       border-radius: $radius;
+      white-space: normal;
+      overflow-wrap: anywhere;
 
       &[aria-current="true"] {
         background: transparentize($blue, 0.8);
